# Rust_Axum-SvelteKit

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
.docker/: dev-env  docker-compose.yaml
.local_setup/: .gitignore  add_hosts.sh  add_ssl.sh  cert.py  hosts
app/: main.rs
app/api/: auth.rs  routing.rs
app/lib/: Input.svelte  Navbar.svelte
app/views/: +layout.svelte  +layout.ts  +page.svelte
app/views/account/(app)/: +layout.svelte  +page.svelte
app/views/account/[type]/: +page.svelte  +page.ts
tests/: index.test.ts
